# DroneRanger-Autonomy

./: .gitignore  .gitmodules  README.md
install/: local_setup.sh  setup.sh
install/drone_autonomy/lib/drone_autonomy/: circle_flight  data_recorder  drone_controller  figure_eight  forward_mission  house_inspection  mission_executor  obstacle_detector  orbit_point  pursuit_flight  rrt_pursuit_single  simple_takeoff  square_flight  waypoint_mission
install/drone_autonomy/share/drone_autonomy/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/offboard_avoidance_unity/lib/offboard_avoidance_unity/: unity_house_avoidance
install/offboard_avoidance_unity/share/offboard_avoidance_unity/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/offboard_test/lib/offboard_test/: obstacle_avoidance_mission  obstacle_publisher  odom_monitor  offboard_cesium_origin_takeoff_land  offboard_orbit_mission  offboard_square_mission  offboard_takeoff
log/: latest_build
src/drone_autonomy/: setup.py
src/drone_autonomy/docs/: Algorithm_Design_Breakthrough.md
src/offboard_avoidance_unity/: package.xml  setup.cfg  setup.py
src/offboard_avoidance_unity/offboard_avoidance_unity/: unity_house_avoidance.py
src/offboard_test/: setup.py
src/offboard_test/offboard_test/: offboard_orbit_mission.py  offboard_takeoff.py  test.py
src/scripts/: HowToDebug.md  README.md  build_ros.sh  enable_qgc.sh  install_deps.sh  run_tcp_endpoint.sh  start_drone.sh  stop_drone.sh  verify_drone_pipeline.sh
(+4215 files in other folders)
