<?xml version="1.0"?>
<package format="3">
  <name>offboard_avoidance_unity</name>
  <version>0.0.0</version>
  <description>Offboard avoidance mission around Unity house.</description>
  <maintainer email="jefft@example.com">jefft</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
